--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,4 +12,19 @@
   <welcome-file-list>
     <welcome-file>publica/index.jsp</welcome-file>
   </welcome-file-list>
+   <resource-ref>
+        <description>DataSource MyImage</description>
+        <res-ref-name>jdbc/myimage</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+    <filter>
+        <filter-name>conectionFilter</filter-name>
+        <filter-class>com.myimage.dao.utils.ConectionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>conectionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
 </web-app>
